--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,20 +9,26 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="200dp"
+        android:layout_width="600dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="18dp"
         android:background="#64DD17"
+        android:textStyle="normal"
         android:text="width 200dp"
+        android:gravity="center"
+        android:paddingVertical="30dp"
         android:textColor="#D50000"
         android:textSize="26dp" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="600dp"
+        android:layout_height="300dp"
         android:background="#00f"
+        android:textStyle="bold"
         android:text="width wrap_content"
         android:textColor="#fff"
+        android:gravity="center"
+        android:padding="30dp"
         android:layout_marginTop="18dp"
         android:textSize="26dp"
         />
@@ -31,8 +37,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#00f"
+        android:textStyle="italic"
         android:layout_marginTop="18dp"
         android:text="width match_parent"
+        android:padding="30dp"
+        android:gravity="center"
         android:textColor="#fff"
         android:textSize="26dp"
         />
