--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,48 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraitLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity" >
 
-    <TextView
-        android:layout_width="600dp"
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
-        android:background="#64DD17"
-        android:textStyle="normal"
-        android:text="width 200dp"
-        android:gravity="center"
-        android:paddingVertical="30dp"
-        android:textColor="#D50000"
-        android:textSize="26dp" />
-
-    <TextView
-        android:layout_width="600dp"
-        android:layout_height="300dp"
-        android:background="#00f"
-        android:textStyle="bold"
-        android:text="width wrap_content"
-        android:textColor="#fff"
-        android:gravity="center"
-        android:padding="30dp"
-        android:layout_marginTop="18dp"
-        android:textSize="26dp"
-        />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#00f"
-        android:textStyle="italic"
-        android:layout_marginTop="18dp"
-        android:text="width match_parent"
-        android:padding="30dp"
-        android:gravity="center"
-        android:textColor="#fff"
-        android:textSize="26dp"
-        />
-</LinearLayout>
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
