--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,8 +74,8 @@
         android:id="@+id/view_A"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="28dp"
-        android:layout_marginTop="124dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="180dp"
         android:text="view_A"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -87,9 +87,9 @@
         android:layout_marginBottom="28dp"
         android:text="view_B"
         app:layout_constraintBottom_toTopOf="@+id/view_A"
-        app:layout_constraintTop_toBottomOf="@id/view_B"
         app:layout_constraintLeft_toRightOf="@+id/view_A"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintTop_toBottomOf="@id/view_B"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/view_C"
@@ -102,6 +102,27 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/view_B"
         app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/left_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="32dp"
+        android:text="left_view"
+        android:textSize="12sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/right_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:text="right_view"
+        android:textSize="20sp"
+        app:layout_constraintBaseline_toBaselineOf="@id/left_view"
+        app:layout_constraintLeft_toRightOf="@id/left_view" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
