--- a/app/src/main/res/layout/activity_calculator_bl.xml
+++ b/app/src/main/res/layout/activity_calculator_bl.xml
@@ -8,100 +8,93 @@
     tools:ignore="ExtraText">
 
     <EditText
-        android:id="@+id/editTextNumber"
+        android:id="@+id/editTextNumber3"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="40dp"
+        android:autofillHints=""
         android:ems="10"
         android:inputType="number"
-        app:layout_constraintHorizontal_chainStyle="spread"
-        app:layout_constraintRight_toLeftOf="@id/editTextNumber2"
+        android:minHeight="60dp"
+        app:layout_constraintRight_toLeftOf="@id/editTextNumber4"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <EditText
-        android:id="@+id/editTextNumber2"
+        android:id="@+id/editTextNumber4"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="28dp"
+        android:layout_marginEnd="32dp"
+        android:autofillHints=""
         android:ems="10"
         android:inputType="number"
-        app:layout_constraintBottom_toBottomOf="@+id/editTextNumber"
+        android:minHeight="60dp"
+        app:layout_constraintBottom_toBottomOf="@+id/editTextNumber3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_chainStyle="spread"
-        app:layout_constraintLeft_toRightOf="@+id/editTextNumber" />
-
+        app:layout_constraintLeft_toRightOf="@id/editTextNumber3"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <RadioGroup
-        android:id="@+id/radio"
-        android:layout_width="wrap_content"
+        android:id="@+id/radiogroup"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="77dp"
+        android:layout_marginTop="44dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <RadioButton
-        android:id="@+id/add"
-        android:layout_width="358dp"
-        android:layout_height="130dp"
-        android:layout_marginTop="4dp"
-        android:layout_weight="1"
-        android:text="add"
-        app:layout_constraintEnd_toEndOf="@+id/editTextNumber2"
+        app:layout_constraintEnd_toEndOf="@+id/editTextNumber4"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/editTextNumber"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />
+        app:layout_constraintStart_toStartOf="@+id/editTextNumber3"
+        app:layout_constraintTop_toBottomOf="@+id/editTextNumber3"
+        tools:ignore="MissingConstraints">
 
-    <RadioButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="substract"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="251dp"
-        tools:layout_editor_absoluteY="121dp" />
+        <RadioButton
+            android:id="@+id/add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/add" />
 
-    <RadioButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="multiple"
-        tools:layout_editor_absoluteX="169dp"
-        tools:layout_editor_absoluteY="121dp" />
+        <RadioButton
+            android:id="@+id/subtract"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/subtract" />
 
-    <RadioButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="divide"
-        tools:layout_editor_absoluteX="100dp"
-        tools:layout_editor_absoluteY="121dp" />
+        <RadioButton
+            android:id="@+id/multiply"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Multiply" />
 
-    /RadiogrGroup>
+        <RadioButton
+            android:id="@+id/divide"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Divide" />
+    </RadioGroup>
 
     <Button
-        android:id="@+id/calc"
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="calculate"
-        app:layout_constraintEnd_toEndOf="@+id/add"
-        app:layout_constraintStart_toStartOf="@+id/add"
-        app:layout_constraintTop_toBottomOf="@+id/add" />
+        android:layout_marginTop="40dp"
+        android:text="Calculate"
+        app:layout_constraintEnd_toEndOf="@+id/radiogroup"
+        app:layout_constraintStart_toStartOf="@+id/radiogroup"
+        app:layout_constraintTop_toBottomOf="@+id/radiogroup" />
 
     <TextView
         android:id="@+id/result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="you answer will be displayed here"
-        app:layout_constraintEnd_toEndOf="@+id/calc"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="@+id/calc"
-        app:layout_constraintTop_toBottomOf="@+id/calc" />
-
-
-    />
-
+        android:layout_marginTop="40dp"
+        android:text="You answer will be displayed here"
+        app:layout_constraintEnd_toEndOf="@+id/button"
+        app:layout_constraintStart_toStartOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
